--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 -->
 
 
-<script type="module" src="/menu.js"></script>
+<script type="module" src="menu.js"></script>
 <script type="module" src="slider5.js?v=1.0.3"></script>
 
 
