--- a/index.html
+++ b/index.html
@@ -71,37 +71,21 @@
 </section>
 
 
-<!--
-<section id="services">
-    services
-</section>
-
-
-<section id="contact"> 
+<section id="contact">
     <div class="formulario contenedor">
         <div class="formContenedor">
-            <form action="" method="">
+            <form id="contactForm" action="functions.php" method="POST">
                 <input type="text" id="name" name="name" placeholder="Name*" required>
                 <input type="email" id="email" name="email" placeholder="Mail*" required>
                 <input type="tel" id="phone" name="phone" placeholder="Phone*" required>
-                <input type="text" id="service" name="service" placeholder="Services" required>
+                <input type="hidden" id="service" name="service">
                 <textarea id="details" name="details" rows="8" placeholder="Message"></textarea>
-                <label for="cars">Choose a car:</label>
-
-                <select name="lenguajes" id="lang">
-                    <option value="javascript">JavaScript</option>
-                    <option value="php">PHP</option>
-                    <option value="java">Java</option>
-                    <option value="golang">Golang</option>
-                    <option value="python">Python</option>
-                    <option value="c#">C#</option>
-                    <option value="C++">C++</option>
-                    <option value="erlang">Erlang</option>
+                <button type="submit">Send</button>
             </form>
-        </div>  
+        </div>
     </div>
 </section>
--->
+
 
 
 <script type="module" src="menu.js"></script>
