--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style2.css">
-    <link rel="stylesheet" type="text/css" href="animations.css">
+    <link rel=stylesheet type="text/css" href="style2.css">
+    <link rel=stylesheet type="text/css" href="animations.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
 
-<body>
 
 <section id="header" class="seccionActiva">
     <div class="headerCont">
@@ -76,25 +71,42 @@
 </section>
 
 
-<section id="contact">
+<!--
+<section id="services">
+    services
+</section>
+
+
+<section id="contact"> 
     <div class="formulario contenedor">
         <div class="formContenedor">
-            <form id="contactForm" action="functions.php" method="POST">
+            <form action="" method="">
                 <input type="text" id="name" name="name" placeholder="Name*" required>
                 <input type="email" id="email" name="email" placeholder="Mail*" required>
                 <input type="tel" id="phone" name="phone" placeholder="Phone*" required>
-                <input type="hidden" id="service" name="service">
+                <input type="text" id="service" name="service" placeholder="Services" required>
                 <textarea id="details" name="details" rows="8" placeholder="Message"></textarea>
-                <button type="submit">Send</button>
+                <label for="cars">Choose a car:</label>
+
+                <select name="lenguajes" id="lang">
+                    <option value="javascript">JavaScript</option>
+                    <option value="php">PHP</option>
+                    <option value="java">Java</option>
+                    <option value="golang">Golang</option>
+                    <option value="python">Python</option>
+                    <option value="c#">C#</option>
+                    <option value="C++">C++</option>
+                    <option value="erlang">Erlang</option>
             </form>
-        </div>
+        </div>  
     </div>
 </section>
-
+-->
 
 
 <script type="module" src="menu.js"></script>
 <script type="module" src="slider5.js?v=1.0.3"></script>
 
-</body>
-</html>
+
+
+
